[package]
name = "linkbreakers"
version = "1.44.2"
edition = "2021"
authors = ["Linkbreakers Team <support@linkbreakers.com>"]
description = "Official Rust SDK for the Linkbreakers API"
license = "MIT"
repository = "https://github.com/linkbreakers-com/linkbreakers-rust"
homepage = "https://linkbreakers.com"
documentation = "https://docs.rs/linkbreakers"
keywords = ["linkbreakers", "api", "sdk", "url-shortener"]
categories = ["api-bindings", "web-programming"]
readme = "README.md"

[dependencies]
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1"
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
url = "2.5"
base64 = "0.22"

[dev-dependencies]
tokio-test = "0.4"
